--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,12 @@
-spring.application.name=spring_resume
+spring.application.name=spring_recruit_prj
 
-#thymeleaf 설정
+#thymeleaf 설정
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+#DBMS설정
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
+spring.datasource.username=team3
+spring.datasource.password=1234
