--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,14 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
 spring.datasource.username=team3
 spring.datasource.password=1234
+
+#JPA 설정
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.show-sql=true
+
+#MyBatis 설정
+mybatis.mapper-locations=classpath:/mapper/**.xml
+#typeAlias에 사용될 패키지명을 설정 DDD(근데 인원 많으니 웬만하면 쓰지 맙시다..)
+
+#MyBatis로그 콘솔 출력
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
