--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
 
 #MyBatis 설정
-mybatis.mapper-locations=classpath:/mapper/**.xml
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #typeAlias에 사용될 패키지명을 설정 DDD(근데 인원 많으니 웬만하면 쓰지 맙시다..)
 
 #MyBatis로그 콘솔 출력
