--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,3 +21,5 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 #MyBatis로그 콘솔 출력
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#CamelCase 허용
+mybatis.configuration.map-underscore-to-camel-case=true
