--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
     		<artifactId>mybatis-spring-boot-starter</artifactId>
     		<version>3.0.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-mail</artifactId>
+	    <version>3.5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
