--- a/src/main/resources/application-mingi.properties
+++ b/src/main/resources/application-mingi.properties
@@ -27,3 +27,10 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #hash
 prj.key=sist0123456789
 prj.salt=a1b2c3d4a1b2c3d4
+
+#saveDir
+upload.certification.path=resources/static/corp/biz_cert
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size = 100MB
+spring.tomcat.max-http-form-post-size:10MB
