--- a/src/main/resources/application-mingi.properties
+++ b/src/main/resources/application-mingi.properties
@@ -27,10 +27,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #hash
 prj.key=sist0123456789
 prj.salt=a1b2c3d4a1b2c3d4
+FormState.apiKey=f2XGVPM83eg%2B2DjAAuAr6wEkvRlk4KwQYLDV1WkrveBZOQ6upT8O2otcjEJEiqqllEIhN%2B2KvRi2EKceHA5fJQ%3D%3D
+# 기존 Multipart 설정
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
-#saveDir
-upload.certification.path=resources/static/corp/biz_cert
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size = 100MB
-spring.tomcat.max-http-form-post-size:10MB
+# 파일 업로드 디버깅용
+logging.level.org.springframework.web.multipart=DEBUG
+logging.level.org.apache.tomcat.util.http.fileupload=DEBUG
