--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,9 +7,9 @@ spring.thymeleaf.cache=false
 
 #DBMS설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
-spring.datasource.username=team3
-spring.datasource.password=1234
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
 #JPA 설정
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
@@ -19,8 +19,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ca
 #MyBatis 설정
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #typeAlias에 사용될 패키지명을 설정 DDD(근데 인원 많으니 웬만하면 쓰지 맙시다..)
-
+mybatis.type-aliases-package=kr.co.sist.user.dto
 #MyBatis로그 콘솔 출력
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #CamelCase 허용
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#hash
+prj.key=sist0123456789
+prj.salt=a1b2c3d4a1b2c3d4
+FormState.apiKey=f2XGVPM83eg%2B2DjAAuAr6wEkvRlk4KwQYLDV1WkrveBZOQ6upT8O2otcjEJEiqqllEIhN%2B2KvRi2EKceHA5fJQ%3D%3D
