--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ca
 #MyBatis 설정
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #typeAlias에 사용될 패키지명을 설정 DDD(근데 인원 많으니 웬만하면 쓰지 맙시다..)
-mybatis.type-aliases-package=kr.co.sist.user.dto
+mybatis.type-aliases-package=kr.co.sist
 #MyBatis로그 콘솔 출력
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #CamelCase 허용
