--- a/src/main/resources/application-mingi.properties
+++ b/src/main/resources/application-mingi.properties
@@ -5,11 +5,17 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
+
 #DBMS설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=SHINMINGI
-spring.datasource.password=4260
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
+spring.datasource.username=team3
+spring.datasource.password=1234
+#DBMS설정
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=SHINMINGI
+#spring.datasource.password=4260
 
 #JPA 설정
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
@@ -35,3 +41,8 @@ spring.servlet.multipart.max-request-size=20MB
 # 파일 업로드 디버깅용
 logging.level.org.springframework.web.multipart=DEBUG
 logging.level.org.apache.tomcat.util.http.fileupload=DEBUG
+
+# 세션 설정
+server.servlet.session.timeout=1h
+# 시크릿 키
+spring.jwt.mysecret=shinmingiissofuckinghandsomewonderfulgreatfantstic
