양준수 커밋

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,8 +7,15 @@ spring.thymeleaf.cache=false
 
 #DBMS설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
-spring.datasource.username=team3
+
+#공용
+#spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl 
+#spring.datasource.username=team3
+#spring.datasource.password=1234
+
+#개인
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.70:1521:orcl 
+spring.datasource.username=yang
 spring.datasource.password=1234
 
 #JPA 설정
