--- a/src/main/resources/application-mingi.properties
+++ b/src/main/resources/application-mingi.properties
@@ -7,15 +7,15 @@ spring.thymeleaf.cache=false
 
 
 #DBMS설정
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
-spring.datasource.username=team3
-spring.datasource.password=1234
-#DBMS설정
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-#spring.datasource.username=SHINMINGI
-#spring.datasource.password=4260
+#spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl
+#spring.datasource.username=team3
+#spring.datasource.password=1234
+#DBMS설정
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=SHINMINGI
+spring.datasource.password=4260
 
 #JPA 설정
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
@@ -24,7 +24,7 @@ spring.jpa.show-sql=true
 #MyBatis 설정
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #typeAlias에 사용될 패키지명을 설정 DDD(근데 인원 많으니 웬만하면 쓰지 맙시다..)
-
+mybatis.type-aliases-package=kr.co.sist
 #MyBatis로그 콘솔 출력
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #CamelCase 허용
