--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -44,3 +44,11 @@ logging.level.org.apache.tomcat.util.http.fileupload=DEBUG
 server.servlet.session.timeout=1h
 # 시크릿 키
 spring.jwt.mysecret=shinmingiissofuckinghandsomewonderfulgreatfantstic
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yangprj0705@gmail.com
+spring.mail.password=qztr gjaa wkum hzrr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
