--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,14 +6,11 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 #DBMS설정
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl 
-#spring.datasource.username=team3
-#spring.datasource.password=1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl 
-spring.datasource.username=scott
-spring.datasource.password=tiger
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl 
+spring.datasource.username=team3
+spring.datasource.password=1234
+
 
 
 
