--- a/src/main/resources/application-mingi.properties
+++ b/src/main/resources/application-mingi.properties
@@ -13,7 +13,8 @@ spring.thymeleaf.cache=false
 #spring.datasource.password=1234
 #DBMS설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/FREEPDB1
 spring.datasource.username=SHINMINGI
 spring.datasource.password=4260
 
