--- a/src/main/resources/application-jhs.properties
+++ b/src/main/resources/application-jhs.properties
@@ -7,9 +7,12 @@ spring.thymeleaf.cache=false
 
 #DBMS설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl 
-spring.datasource.username=team3
-spring.datasource.password=1234
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl 
+spring.datasource.username=scott
+spring.datasource.password=tiger
+
+
+
 
 #JPA 설정
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
@@ -33,6 +36,10 @@ FormState.apiKey=f2XGVPM83eg%2B2DjAAuAr6wEkvRlk4KwQYLDV1WkrveBZOQ6upT8O2otcjEJEi
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+upload.saveDir=C:/workspace/recruit_prj/src/main/resources/static/images/profileImg
+upload.fileDir=C:/workspace/recruit_prj/src/main/resources/static/attachment
+
 
 # 파일 업로드 디버깅용
 logging.level.org.springframework.web.multipart=DEBUG
