--- a/pom.xml
+++ b/pom.xml
@@ -80,27 +80,33 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
 		<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-mail</artifactId>
-	    <version>3.5.3</version>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-mail</artifactId>
+	    	<version>3.5.3</version>
 		</dependency>
 		<!-- JWT -->
 		<dependency>
-	    <groupId>io.jsonwebtoken</groupId>
-	    <artifactId>jjwt-api</artifactId>
-	    <version>0.12.6</version>
+	    	<groupId>io.jsonwebtoken</groupId>
+	    	<artifactId>jjwt-api</artifactId>
+	    	<version>0.12.6</version>
 		</dependency>
 		<dependency>
-	    <groupId>io.jsonwebtoken</groupId>
-	    <artifactId>jjwt-impl</artifactId>
-	    <version>0.12.6</version>
-	    <scope>runtime</scope>
+	    	<groupId>io.jsonwebtoken</groupId>
+	    	<artifactId>jjwt-impl</artifactId>
+	    	<version>0.12.6</version>
+	    	<scope>runtime</scope>
 		</dependency>
 		<dependency>
-	    <groupId>io.jsonwebtoken</groupId>
-	    <artifactId>jjwt-jackson</artifactId>
-	    <version>0.12.6</version>
-	    <scope>runtime</scope>
+	    	<groupId>io.jsonwebtoken</groupId>
+	    	<artifactId>jjwt-jackson</artifactId>
+	    	<version>0.12.6</version>
+	    	<scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6 -->
+		<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		    <version>3.1.3.RELEASE</version>
 		</dependency>
 	</dependencies>
 
