--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -42,6 +42,11 @@ spring.servlet.multipart.max-request-size=20MB
 logging.level.org.springframework.web.multipart=DEBUG
 logging.level.org.apache.tomcat.util.http.fileupload=DEBUG
 
+# 파일 업로드 경로
+upload.saveDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/images/profileImg
+upload.fileDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/attachment
+
+
 # 세션 설정
 server.servlet.session.timeout=1h
 # 시크릿 키
