--- a/src/main/resources/application-min.properties
+++ b/src/main/resources/application-min.properties
@@ -40,6 +40,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
+# 파일 업로드 경로
 upload.saveDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/images/profileImg
 upload.fileDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/attachment
 
