--- a/src/main/resources/application-jhs.properties
+++ b/src/main/resources/application-jhs.properties
@@ -64,7 +64,7 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ai
-spring.ai.openai.api-key=AIzaSyC_gnFI_Y3NJYff_h4-X4k39cEhAf86yG8
+spring.ai.openai.api-key=
 spring.ai.openai.chat-base-url=https://generativelanguage.googleapis.com
 spring.ai.openai.chat.completion-path=/v1beta/models
 spring.ai.openai.chat.model=gemini-2.0-flash
