설정파일 변경

--- a/src/main/resources/application-jhs.properties
+++ b/src/main/resources/application-jhs.properties
@@ -64,7 +64,7 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ai
-spring.ai.openai.api-key=
+spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
 spring.ai.openai.chat-base-url=https://generativelanguage.googleapis.com
 spring.ai.openai.chat.completion-path=/v1beta/models
 spring.ai.openai.chat.model=gemini-2.0-flash
