--- a/src/main/resources/application-yjs.properties
+++ b/src/main/resources/application-yjs.properties
@@ -7,10 +7,9 @@ spring.thymeleaf.cache=false
 
 #DBMS설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.75:1521:orcl 
-spring.datasource.username=team3
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.70:1521:orcl 
+spring.datasource.username=yang
 spring.datasource.password=1234
-
 
 
 #JPA 설정
@@ -40,11 +39,15 @@ spring.servlet.multipart.max-request-size=20MB
 logging.level.org.springframework.web.multipart=DEBUG
 logging.level.org.apache.tomcat.util.http.fileupload=DEBUG
 
+# 파일 업로드 경로
+upload.saveDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/images/profileImg
+upload.fileDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/attachment
+
+
 # 세션 설정
 server.servlet.session.timeout=1h
 # 시크릿 키
 spring.jwt.mysecret=shinmingiissofuckinghandsomewonderfulgreatfantstic
-
 
 #gmail 인증
 spring.mail.host=smtp.gmail.com
