--- a/src/main/resources/application-min.properties
+++ b/src/main/resources/application-min.properties
@@ -60,3 +60,9 @@ spring.mail.password=qztr gjaa wkum hzrr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ai
+spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
+spring.ai.openai.chat-base-url=https://generativelanguage.googleapis.com
+spring.ai.openai.chat.completion-path=/v1beta/models
+spring.ai.openai.chat.model=gemini-2.0-flash
