--- a/src/main/resources/application-jhs.properties
+++ b/src/main/resources/application-jhs.properties
@@ -41,9 +41,10 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-upload.saveDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/images/profileImg
-upload.fileDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/attachment
-
+#upload.saveDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/images/profileImg
+#upload.fileDir=C:/dev/workspace/spring_recruit_prj/src/main/resources/static/attachment
+upload.saveDir=classpath:/static/images/profileImg
+upload.fileDir=classpath:/static/attachment
 
 # 파일 업로드 디버깅용
 logging.level.org.springframework.web.multipart=DEBUG
