주현석 경로 설정 주석 처리

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,8 @@
 spring.application.name=spring_recruit_prj
 
+#배포용 경로 설정
+#upload.saveDir=/root/spring_recruit_prj/upload
+
 #thymeleaf 설정
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
